--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Examen</title>
 </head>
 <body>
-    <div id="salida"></div>
-    <script type="module" src="./js/index.js"></script>
-</body>
+    <button id="opciones">Opciones</button> 
+    <div id="salida1"></div>
+    <div id="salida2"></div>
+    <script type="module" src="./js/index.js">        
+    </script>
+  </body>
 </html>
